--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -24,7 +24,7 @@ $font-color-orange: #FD5A01;
 }
 .card{
   width: 93%;
-  height: 224px;
+ // height: 224px;
   margin-bottom: 4%;
   background-color: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
@@ -42,6 +42,10 @@ $font-color-orange: #FD5A01;
   padding: 0 0 9px 0;
   list-style: none;
   margin: 0;
+}
+.post__location{
+  height: 70px;
+  overflow: hidden;
 }
 .post__package-provider{
  position: absolute;
@@ -74,13 +78,6 @@ $font-color-orange: #FD5A01;
   //position: relative;
   padding: 0;
   margin: 0;
-}
-.post__item-rating-star{
-  margin-top: 0;
-  padding-top: 0;
-  margin-right: 3px;
-  width: 7px;
-  //filter: invert(1);
 }
 .post__type{
   margin: 0;
