--- a/src/components/inbox/inbox-page/interested-user/style/interested.css
+++ b/src/components/inbox/inbox-page/interested-user/style/interested.css
@@ -24,9 +24,14 @@
 }
 
 .interested__photo {
-  width: 60px;
-  height: 60px;
+  align-self: center;
+  width: 50px;
+  height: 50px;
   margin-right: 10px;
+  padding: 5px;
+  background-color: #666666;
+  border-radius: 50%;
+  filter: invert(66%) sepia(0%) saturate(609%) hue-rotate(187deg) brightness(107%) contrast(98%);
 }
 
 .interested__user-type {
