--- a/src/components/inbox/inbox-page/style/inbox-page.css
+++ b/src/components/inbox/inbox-page/style/inbox-page.css
@@ -79,6 +79,22 @@
   -ms-grid-row: 25;
   -ms-grid-column: 1;
   grid-area: btn;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.inbox-page__post-buttons button {
+  width: 200px;
+  height: 46px;
+  color: #FFFFFF;
+  border-radius: 12px;
+  border: none;
+  outline: none;
+}
+.inbox-page__post-buttons button:focus {
+  border: none;
+  outline: none;
 }
 
 .inbox-page__photos {
