--- a/src/components/inbox/inbox-page/style/inbox-page.scss
+++ b/src/components/inbox/inbox-page/style/inbox-page.scss
@@ -66,6 +66,21 @@
 }
 .inbox-page__post-buttons{
   grid-area: btn;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.inbox-page__post-buttons button{
+  width: 200px;
+  height: 46px;
+  color: #FFFFFF;
+  border-radius: 12px;
+  border: none;
+  outline: none;
+  &:focus{
+    border: none;
+    outline: none;
+  }
 }
 .inbox-page__photos{
   display: flex;
