sidebar photos fix

--- a/src/components/sidebar/style/sidebar.scss
+++ b/src/components/sidebar/style/sidebar.scss
@@ -131,11 +131,15 @@ $percent: calc(var(--rating) / 5 * 100%);
   grid-area: l;
 }
 .sidebar__profile-photos{
+  width: 115px;
+  height: 115px;
   grid-area: p;
   overflow: hidden;
   position: relative;
 }
 .profile-sidebar__profile-photos{
+  width: 115px;
+  height: 115px;
   overflow: hidden;
   position: relative;
 }
@@ -153,8 +157,10 @@ $percent: calc(var(--rating) / 5 * 100%);
   border-radius: 50%;
 }
 .profile-sidebar__item-icon{
+  position: absolute;
   align-self: center;
   width: 100%;
+  height: 100%;
   padding: 5px;
   background-color: #666666;
   border-radius: 50%;
@@ -166,7 +172,7 @@ $percent: calc(var(--rating) / 5 * 100%);
 .sidebar__item-icon {
   position: absolute;
   align-self: center;
-  width: 80%;
+  width: 100%;
   padding: 5px;
   background-color: #666666;
   border-radius: 50%;
