--- a/src/components/landing-page/registrationForm/style/register.scss
+++ b/src/components/landing-page/registrationForm/style/register.scss
@@ -68,6 +68,26 @@
     color: #000000;
   }
 }
+.register__input.form-control{
+  width: 350px;
+  height: 46px;
+  border: 1px solid rgba(0, 0, 0, 0.27);
+  box-sizing: border-box;
+  border-radius: 5px;
+  background-color: #FFFFFF;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #000000;
+  &::placeholder{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 14px;
+    color: #000000;
+  }
+}
 .required{
 
   &::before{
@@ -95,6 +115,9 @@
   justify-content: flex-end;
 }
 .register__sign-up-btn{
+  &:disabled{
+    opacity: 0.5;
+  }
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
