--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -38,6 +38,7 @@ $font-color-orange: #FD5A01;
   }
 }
 .post__top-list{
+  height: 53px;
   display: flex;
   padding: 0 0 9px 0;
   list-style: none;
