--- a/src/components/landing-page/registrationForm/style/register.scss
+++ b/src/components/landing-page/registrationForm/style/register.scss
@@ -96,18 +96,25 @@
   }
 }
 .register__checkbox{
-
+  display: flex;
+  align-content: flex-end;
   margin-right: auto;
   padding-left: 9%;
 }
 .register__checkbox-lbl{
+  label{
+    margin: 0;
+    &:hover{
+      text-decoration-line: underline;
+      cursor: pointer;
+    }
+  }
   display: flex;
   align-items: center;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 14px;
-  text-decoration-line: underline;
   color: #FD5A01;
 }
 .register__sign-up{
