--- a/src/components/landing-page/style/landing-page.css
+++ b/src/components/landing-page/style/landing-page.css
@@ -30,7 +30,7 @@
   padding-left: 5%;
 }
 
-.landing__join-btn {
+button.landing__join-btn {
   position: relative;
   z-index: 1;
   width: 300px;
@@ -40,7 +40,8 @@
   border: none;
   margin-left: 5%;
   margin-top: 5%;
-  font-family: Muller;
+  transition: all 0.5s;
+  font-family: muller;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
@@ -48,7 +49,25 @@
   text-align: center;
   color: #000000;
 }
-.landing__join-btn:focus {
+button.landing__join-btn:after {
+  content: "";
+  background: #90EE90;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s;
+}
+button.landing__join-btn:hover:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s;
+}
+button.landing__join-btn:focus {
   outline: none;
 }
 
