--- a/src/components/reviews/style/reviews.css
+++ b/src/components/reviews/style/reviews.css
@@ -31,12 +31,14 @@
 }
 
 .review__text {
+  overflow: hidden;
+  height: 38px;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 130%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   color: #FFFFFF;
 }
 
