--- a/src/components/reviews/style/reviews.scss
+++ b/src/components/reviews/style/reviews.scss
@@ -28,12 +28,14 @@
   filter: invert(100%) sepia(0%) saturate(7471%) hue-rotate(26deg) brightness(100%) contrast(97%);
 }
 .review__text{
+  overflow: hidden;
+  height: 38px;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 130%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   color: #FFFFFF;
 }
 .review__time{
