--- a/src/components/create-post/style/create-post.scss
+++ b/src/components/create-post/style/create-post.scss
@@ -134,6 +134,7 @@ ul{
   outline: none;
   border: none;
   padding: 0;
+  cursor: pointer;
   background-image: url('../images/plus.svg');
   &:focus{
     outline: none;
