--- a/src/components/landing-page/style/landing-page.css
+++ b/src/components/landing-page/style/landing-page.css
@@ -51,21 +51,22 @@ button.landing__join-btn {
 }
 button.landing__join-btn:after {
   content: "";
-  background: #90EE90;
+  background: #D8D8D8;
   display: block;
   position: absolute;
   padding-top: 300%;
   padding-left: 350%;
-  margin-left: -20px !important;
-  margin-top: -120%;
+  margin-left: 0 !important;
+  margin-top: 120%;
   opacity: 0;
-  transition: all 0.8s;
+  transition: 0s;
 }
 button.landing__join-btn:hover:after {
-  padding: 0;
-  margin: 0;
-  opacity: 1;
-  transition: 0s;
+  padding: 100% 0;
+  margin-top: -120%;
+  margin-left: 300%;
+  opacity: 0;
+  transition: all 0.8s;
 }
 button.landing__join-btn:focus {
   outline: none;
