--- a/src/components/landing-page/style/landing-page.scss
+++ b/src/components/landing-page/style/landing-page.scss
@@ -33,6 +33,7 @@
   padding-left: 5%;
 }
 button.landing__join-btn{
+  //overflow: hidden;
   position: relative;
   z-index: 1;
   width: 300px;
@@ -52,21 +53,22 @@ button.landing__join-btn{
   color: #000000;
   &:after{
     content: "";
-    background: #90EE90;
+    background: #D8D8D8;
     display: block;
     position: absolute;
     padding-top: 300%;
     padding-left: 350%;
-    margin-left: -20px!important;
-    margin-top: -120%;
+    margin-left: 0!important;
+    margin-top: 120%;
     opacity: 0;
-    transition: all 0.8s
+    transition: 0s;
   }
   &:hover:after{
-    padding: 0;
-    margin: 0;
-    opacity: 1;
-    transition: 0s
+    padding: 100% 0;
+    margin-top: -120%;
+    margin-left: 300%;
+    opacity: 0;
+    transition: all 0.8s
   }
   &:focus{
     outline: none;
