--- a/src/components/inbox/inbox-page/interested-user/style/interested.css
+++ b/src/components/inbox/inbox-page/interested-user/style/interested.css
@@ -28,6 +28,14 @@
   width: 50px;
   height: 50px;
   margin-right: 10px;
+  border-radius: 50%;
+}
+
+.interested__photo_empty {
+  align-self: center;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
   padding: 5px;
   background-color: #666666;
   border-radius: 50%;
@@ -35,7 +43,7 @@
 }
 
 .interested__user-type {
-  font-family: Muller;
+  font-family: muller;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
