--- a/src/components/inbox/inbox-page/interested-user/style/interested.scss
+++ b/src/components/inbox/inbox-page/interested-user/style/interested.scss
@@ -26,13 +26,20 @@
   width: 50px;
   height: 50px;
   margin-right: 10px;
+  border-radius: 50%;
+}
+.interested__photo_empty{
+  align-self: center;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
   padding: 5px;
   background-color: #666666;
   border-radius: 50%;
   filter: invert(66%) sepia(0%) saturate(609%) hue-rotate(187deg) brightness(107%) contrast(98%);
 }
 .interested__user-type{
-  font-family: Muller;
+  font-family: muller;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
