--- a/src/components/user-profile/style/user-profile.scss
+++ b/src/components/user-profile/style/user-profile.scss
@@ -33,3 +33,20 @@
 .user-profile__reviews{
   margin-top: 3%;
 }
+.user-info__photo-empty{
+  align-self: center;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  padding: 5px;
+  background-color: #666666;
+  border-radius: 50%;
+  filter: invert(66%) sepia(0%) saturate(609%) hue-rotate(187deg) brightness(107%) contrast(98%);
+}
+.user-info__photo{
+  align-self: center;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  border-radius: 50%;
+}
