--- a/src/components/reviews/full-review/style/full-review.scss
+++ b/src/components/reviews/full-review/style/full-review.scss
@@ -47,3 +47,44 @@
   //width: 96%;
   position: absolute;
 }
+
+.rate__input-file-btn{
+  height: 0;
+  overflow: hidden;
+  width: 0;
+}
+.rate__input-file-btn + label{
+  position: relative;
+  cursor: pointer;
+  width: 95%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  background: #F8F8F8;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  border-radius: 6px;
+
+  &.update__input-file-fake{
+    overflow: hidden;
+    img{
+      
+      display: inline-block;
+      transition: all 0.3s;
+    }
+    &:hover {
+      img {
+        transform: translateY(300%);
+        background-color: #f5f4f2;
+        box-shadow: 0 0 0 10px #f5f4f2;
+        border-radius: 50%;
+      }
+    }
+  }
+}
+textarea.rate__text.form-control{
+  height: 160px;
+}
