--- a/src/components/reviews/full-review/style/full-review.scss
+++ b/src/components/reviews/full-review/style/full-review.scss
@@ -2,7 +2,7 @@
   position: absolute;
   left: 20%;
   //top: 22%;
-  width: 80%;
+  width: 85%;
   background: #FFFFFF;
   border-radius: 20px;
   z-index: 99;
@@ -30,6 +30,12 @@
 }
 .full-review__exit{
   float: right;
+  cursor: pointer;
+  &:hover{
+    background-color: #f5f4f2;
+    box-shadow: 0 0 0 10px #f5f4f2;
+    border-radius: 50%;
+  }
 }
 .full-review__image{
   position: relative;
@@ -63,21 +69,22 @@
   justify-content: center;
   align-items: center;
   height: 150px;
-  background: #F8F8F8;
+  background: #F0F0F0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   border-radius: 6px;
 
-  &.update__input-file-fake{
+  &.rate__input-file-fake{
     overflow: hidden;
     img{
-      
+      //filter: invert(100%) sepia(0%) saturate(4247%) hue-rotate(56deg) brightness(75%) contrast(102%);
+      background-color: #E6E6E6;
+      box-shadow: 0 0 0 10px #E6E6E6;
+      border-radius: 50%;
       display: inline-block;
-      transition: all 0.3s;
     }
     &:hover {
       img {
-        transform: translateY(300%);
         background-color: #f5f4f2;
         box-shadow: 0 0 0 10px #f5f4f2;
         border-radius: 50%;
@@ -86,5 +93,25 @@
   }
 }
 textarea.rate__text.form-control{
+  background: #F0F0F0 !important;
   height: 160px;
+}
+.rate__attach-photo-lbl{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.4px;
+  color: #B8B8B8;
+  margin-top: 20px;
+}
+.rate__title{
+  font-family: Muller;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 24px;
+  color: #000000;
 }
