--- a/src/components/reviews/full-review/style/full-review.scss
+++ b/src/components/reviews/full-review/style/full-review.scss
@@ -9,7 +9,7 @@
   padding: 27px 32px;
 }
 .full-review__text{
-  width: 95%;
+ // width: 95%;
   height: 60%;
   overflow: auto;
   font-family: Muller;
@@ -50,7 +50,8 @@
   border-radius: 6px;
 }
 .full-review__image-item{
-  //width: 96%;
+  width: 100%;
+  height: 100%;
   position: absolute;
 }
 
@@ -62,7 +63,7 @@
 .rate__input-file-btn + label{
   position: relative;
   cursor: pointer;
-  width: 95%;
+  //width: 95%;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -114,4 +115,19 @@ textarea.rate__text.form-control{
   font-size: 24px;
   line-height: 24px;
   color: #000000;
+}
+.rate__button{
+  margin-top: 10px;
+  float: right;
+  background: #FD5A01;
+  width: 200px;
+  height: 46px;
+  color: #FFFFFF;
+  border-radius: 12px;
+  border: none;
+  outline: none;
+  &:focus{
+    border: none;
+    outline: none;
+  }
 }
