--- a/src/components/reviews/style/reviews.scss
+++ b/src/components/reviews/style/reviews.scss
@@ -1,10 +1,30 @@
 .reviews{
   margin-top: 3%;
   display: flex;
+  height: 110px;
+  overflow: auto;
   //flex: 1 1 15%;
   flex-flow: row wrap;
   padding-left: 7%;
   //padding-right: 2%;
+  &::-webkit-scrollbar {
+    width: 5px;
+    box-sizing: content-box;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #F4F3F3;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #D8D8D8;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: #888;;
+  }
   }
 .review{
   padding: 5px 9px;
