--- a/src/components/post/full-view/style/full-post.css
+++ b/src/components/post/full-view/style/full-post.css
@@ -7,7 +7,6 @@
   padding: 27px 32px;
   border-radius: 20px;
   width: 100%;
-  height: 673px;
 }
 
 .full-post__text {
@@ -21,7 +20,6 @@
   font-weight: normal;
   line-height: 170%;
   color: #424141;
-  text-transform: capitalize;
   display: flex;
   align-items: center;
 }
@@ -88,6 +86,7 @@
 }
 
 .full-post_avatar-empty {
+  margin-right: 11px;
   align-self: center;
   width: 65px;
   height: 65px;
