--- a/src/components/post/full-view/style/full-post.scss
+++ b/src/components/post/full-view/style/full-post.scss
@@ -14,7 +14,7 @@
   padding: 27px 32px;
   border-radius: 20px;
   width: 100%;
-  height: 673px;
+ // height: 673px;
 }
 .full-post__text{
   margin-top: 14px;
@@ -23,7 +23,6 @@
   height: 162px;
   overflow: auto;
   @include fontFunc(16px, normal, normal, 170%, #424141);
-  text-transform: capitalize;
   display: flex;
   align-items: center;
 }
@@ -76,6 +75,7 @@
   margin-right: 11px;
 }
 .full-post_avatar-empty{
+  margin-right: 11px;
   align-self: center;
   width: 65px;
   height: 65px;
