--- a/src/components/pop-up/popup-logout/style/logout.scss
+++ b/src/components/pop-up/popup-logout/style/logout.scss
@@ -1,5 +1,7 @@
 .logout-content .modal-content{
   border-radius: 20px;
+  left: 20px;
+  width: 100%;
 }
 button.logout__yes.btn.btn-primary{
   background-color: #FD5A01;
