--- a/src/components/reviews/style/reviews.css
+++ b/src/components/reviews/style/reviews.css
@@ -1,7 +1,6 @@
 .reviews {
   margin-top: 3%;
   display: flex;
-  height: 110px;
   overflow: auto;
   flex-flow: row wrap;
   padding-left: 7%;
@@ -20,6 +19,14 @@
 }
 .reviews::-webkit-scrollbar-thumb:hover {
   background: #888;
+}
+
+.reviews__user-profile {
+  height: 450px;
+}
+
+.reviews__profile {
+  height: 110px;
 }
 
 .review {
