--- a/src/components/create-post/style/create-post.css
+++ b/src/components/create-post/style/create-post.css
@@ -1,4 +1,4 @@
-.modal-content {
+.create-post-modal .modal-content {
   position: absolute;
   left: -12%;
   top: 7%;
@@ -20,18 +20,6 @@
   grid-template-areas: "t t" "lf lt" "dt dt" "ttl ds" "p p" "b b";
 }
 
-.modal-content {
-  position: absolute;
-  left: -12%;
-  top: 7%;
-  width: 150%;
-  overflow: hidden;
-  background: #FFFFFF;
-  border-radius: 20px;
-  z-index: 1;
-  padding: 32px;
-}
-
 .create-provide-delivery {
   display: grid;
   align-content: space-between;
@@ -45,18 +33,6 @@
 ul {
   list-style: none;
   padding: 0;
-}
-
-.modal-content {
-  position: absolute;
-  left: -12%;
-  top: 7%;
-  width: 150%;
-  overflow: hidden;
-  background: #FFFFFF;
-  border-radius: 20px;
-  z-index: 1;
-  padding: 32px;
 }
 
 .create-post-airport {
