--- a/src/components/create-post/style/create-post.scss
+++ b/src/components/create-post/style/create-post.scss
@@ -1,4 +1,4 @@
-.modal-content {
+.create-post-modal .modal-content {
   position: absolute;
   left: -12%;
   top: 7%;
@@ -26,18 +26,18 @@
     "p p"
     "b b";
 }
-.modal-content {
-  position: absolute;
-  left: -12%;
-  top: 7%;
-  width: 150%;
-  //height: 680px;
-  overflow: hidden;
-  background: #FFFFFF;
-  border-radius: 20px;
-  z-index: 1;
-  padding: 32px;
-}
+//.modal-content {
+//  position: absolute;
+//  left: -12%;
+//  top: 7%;
+//  width: 150%;
+//  //height: 680px;
+//  overflow: hidden;
+//  background: #FFFFFF;
+//  border-radius: 20px;
+//  z-index: 1;
+//  padding: 32px;
+//}
   .create-provide-delivery{
   display: grid;
   align-content: space-between;
@@ -57,18 +57,18 @@ ul{
   list-style: none;
   padding: 0;
 }
-.modal-content {
-  position: absolute;
-  left: -12%;
-  top: 7%;
-  width: 150%;
-  //height: 680px;
-  overflow: hidden;
-  background: #FFFFFF;
-  border-radius: 20px;
-  z-index: 1;
-  padding: 32px;
-}
+//.modal-content {
+//  position: absolute;
+//  left: -12%;
+//  top: 7%;
+//  width: 150%;
+//  //height: 680px;
+//  overflow: hidden;
+//  background: #FFFFFF;
+//  border-radius: 20px;
+//  z-index: 1;
+//  padding: 32px;
+//}
 .create-post-airport{
   display: grid;
   align-content: space-between;
