--- a/src/components/post/style/post.css
+++ b/src/components/post/style/post.css
@@ -18,7 +18,7 @@
 }
 
 .card {
-  width: 93%;
+  width: 275px;
   margin-bottom: 4%;
   background-color: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
