--- a/src/components/profile/style/profile.scss
+++ b/src/components/profile/style/profile.scss
@@ -5,6 +5,9 @@
   grid-template-columns: 25% 75%;
   grid-template-rows: 80px minmax(893px, auto) 51px;
   overflow: hidden;
+  @media screen and (max-width: 1115px){
+    grid-template-columns: 5% 95%;
+  }
 }
 .profile__title{
   margin-left: 7.8%;
