--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -9,7 +9,7 @@ $font-color-orange: #FD5A01;
 .col-4{
   padding: 0;
 }
-.post{
+.post {
   padding-left: 7.8%;
   padding-right: 6.6%;
 }
@@ -23,7 +23,7 @@ $font-color-orange: #FD5A01;
   float: left;
 }
 .card{
-  width: 93%;
+  width: 275px;
  // height: 224px;
   margin-bottom: 4%;
   background-color: #FFFFFF;
