--- a/src/components/sidebar/style/sidebar.css
+++ b/src/components/sidebar/style/sidebar.css
@@ -1,4 +1,5 @@
 .sidebar {
+  width: 337px;
   overflow: hidden;
   display: grid;
   position: relative;
@@ -21,8 +22,22 @@
   width: 83%;
   border-bottom: 1px solid rgba(196, 196, 196, 0.23);
 }
+@media screen and (max-width: 1115px) {
+  .sidebar {
+    left: -280px;
+    padding-right: 300px;
+    transition: 0.3s;
+  }
+  .sidebar:hover {
+    z-index: 4546;
+    left: 0;
+    padding-right: 0;
+  }
+}
 
 .profile-sidebar {
+  z-index: 54635;
+  width: 337px;
   display: grid;
   overflow: hidden;
   position: relative;
@@ -33,6 +48,18 @@
   grid-row-end: 3;
   grid-template-columns: repeat(1, 90%);
   grid-template-rows: 2% 25% 12% 30% 10%;
+}
+@media screen and (max-width: 1115px) {
+  .profile-sidebar {
+    left: -280px;
+    padding-right: 300px;
+    transition: 0.3s;
+  }
+  .profile-sidebar:hover {
+    z-index: 4546;
+    left: 0;
+    padding-right: 0;
+  }
 }
 
 .profile-sidebar__top {
