display photo selected

--- a/src/components/create-post/style/create-post.scss
+++ b/src/components/create-post/style/create-post.scss
@@ -192,6 +192,7 @@ ul{
   color: #424141;
   margin-left: 5px;
 }
-//.form-control select{
-//  width: 200px;
-//}
+.create-post__selected-photo{
+  height: 100%;
+  width: 100%;
+}
