--- a/src/components/landing-page/style/landing-page.scss
+++ b/src/components/landing-page/style/landing-page.scss
@@ -172,6 +172,7 @@ button.landing__join-btn{
   padding-bottom: 3%;
 }
 .landing__donation-background{
+  width: 100%;
   display: flex;
   align-items: center;
   background: url("../images/donation-back.png") no-repeat;
