--- a/src/components/update-info/style/update-info.css
+++ b/src/components/update-info/style/update-info.css
@@ -36,6 +36,27 @@ textarea.update__about-me.form-control::placeholder {
   padding: 4% 0 0 0;
 }
 
+.update__input.form-control {
+  width: 350px;
+  height: 46px;
+  border: 1px solid rgba(0, 0, 0, 0.27);
+  box-sizing: border-box;
+  border-radius: 5px;
+  background-color: #FFFFFF;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #000000;
+}
+.update__input.form-control::placeholder {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #000000;
+}
+
 .update__input {
   width: 350px;
   height: 46px;
