--- a/src/components/update-info/style/update-info.scss
+++ b/src/components/update-info/style/update-info.scss
@@ -33,6 +33,26 @@ textarea.update__about-me.form-control{
   justify-content: space-between;
   padding: 4% 0 0 0;
 }
+.update__input.form-control{
+  width: 350px;
+  height: 46px;
+  border: 1px solid rgba(0, 0, 0, 0.27);
+  box-sizing: border-box;
+  border-radius: 5px;
+  background-color: #FFFFFF;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #000000;
+  &::placeholder{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 14px;
+    color: #000000;
+  }
+}
 .update__input{
   width: 350px;
   height: 46px;
