fixing register form

--- a/src/components/landing-page/registrationForm/style/register.scss
+++ b/src/components/landing-page/registrationForm/style/register.scss
@@ -120,6 +120,7 @@
 .register__sign-up{
   display: flex;
   justify-content: flex-end;
+  margin-left: auto;
 }
 .register__sign-up-btn{
   &:disabled{
