--- a/src/components/post/style/post.css
+++ b/src/components/post/style/post.css
@@ -25,10 +25,13 @@
   border-radius: 20px;
   display: block !important;
   padding: 16px;
-  cursor: pointer;
   overflow: hidden;
 }
-.card:hover {
+
+.post__card {
+  cursor: pointer;
+}
+.post__card:hover {
   opacity: 0.8;
 }
 
