--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -31,8 +31,11 @@ $font-color-orange: #FD5A01;
   border-radius: 20px;
   display: block !important;
   padding: 16px;
-  cursor: pointer;
   overflow: hidden;
+
+}
+.post__card{
+  cursor: pointer;
   &:hover{
     opacity: 0.8;
   }
