--- a/src/components/user-profile/style/user-profile.scss
+++ b/src/components/user-profile/style/user-profile.scss
@@ -16,6 +16,7 @@
     border-bottom: 1px solid rgba(196, 196, 196, 0.23);
   }
 }
+
 .user-profile__content{
   display: grid;
   grid-row-start: 2;
@@ -49,4 +50,7 @@
   height: 150px;
   margin-right: 10px;
   border-radius: 50%;
+}
+.post__user-click{
+  cursor: pointer;
 }
